# selenium-with-python

./: .env  .gitignore  Dockerfile  README.md  acoes.csv  docker-compose.yml  fundamentos.py  pyproject.toml
src/: config.py  exemplo01.py  util.py
