[tool.poetry]
name = "selenium-with-python"
version = "0.1.0"
description = "StatusInvest webscraping"
authors = ["Geraldo Ferraz <geraldox100@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ex01 = "src.exemplo01:main"
